# buildroot-ltc

./: README.md
system/abctrl2/: Config.in  Makefile.am  abctrl.c  abctrl.h  abctrl2.mk  abctrl2.pc  abctrl_capture.c  abctrl_decode.c  abctrl_encode.c  abctrl_mute.c  abctrl_play.c  abctrl_read.c  abctrl_set.c  abctrl_unitest.c  abctrl_unitest.h  abctrl_unmute.c  configure.ac
system/app-boot-selector/: Config.in  Makefile.am  app-boot-selector.mk  boot_selector.c  bs_debug.h  bs_message.c  bs_message.h  configure.ac
system/app-d304-bt/: Config.in  Makefile.am  app-d304-bt.mk  app_ag.c  app_ag_main.c  app_alsa_pcm.c  app_ble.c  app_ble_client.c  app_ble_client_xml.c  app_ble_main.c  app_ble_server.c  app_manager.c  app_manager_main.c  app_mgt.c  app_qiwo_ag.c  app_qiwo_ble.c  app_qiwo_main.c  app_tm.c  app_tm_main.c  app_xml_param.c  app_xml_utils.c  bridge_info.c  bridge_info.h  configure.ac  flood_bridge.c  flood_bridge.h  flood_bridge_utils.c  flood_bridge_utils.h  start_bsa_server.c  tcp_task.c  tcp_task.h  trans_comm.h  udp_task.c  udp_task.h
system/app-d304-bt/firmware/: bsa_server
system/app-d304-bt/include/: app_ag.h  app_ble.h  app_ble_client.h  app_ble_server.h  app_qiwo.h  app_qiwo_ag.h  app_qiwo_ble.h  app_tm_vsc.h  bsa_av_api.h  bsa_avk_api.h  bsa_ble_api.h  bta_av_api.h  bta_av_co.h  bta_avk_ci.h  bta_hh_api.h  bta_rc_api.h  buildcfg.h
system/app-d304-ft/: Config.in  Makefile.am  S905ft  app-d304-ft.mk  configure.ac  d304ft.c  d304ft.h
system/app-d304-main/: Config.in  Makefile.am  S904tutk  app-d304-main.mk  base64.c  configure.ac  d304main.c  d304main.h  qiwo.c
system/app-d304-main/include/: AVFRAMEINFO.h  AVIOCTRLDEFs.h  IOTCAPIs.h
system/app-d304-upgrade/: Config.in  Makefile.am  app-d304-upgrade.c  app-d304-upgrade.mk  build  configure.ac  net_ota.h  net_ota_curl.c  ota.c  ota.h
system/app-demos/: CMakeLists.txt  Config.in  app-demos.mk
system/app-ittd/: CMakeLists.txt  Config.in  app-ittd.mk  deamon.config  deamon.cpp  deamon.h  main.cpp  main.h  tcpserver.cpp  tcpserver.h
system/app-ittd/old_version/: Config.in  IQTest.c  Makefile.am  app-ittd.mk  configure.ac
system/app-ittd/pthreadcc/: mutualexclusion.cpp  threadbase.cpp
system/app-ittd/socketcc/: ipaddress.cpp  socketbase.cpp  socketcc.h  tcpsockets.cpp
system/app-launcher/: Config.in  Makefile.am  app-launcher.mk  configure.ac
system/app-launcher/gui/: Makefile.am  gui.c  libramain.config  spv_icon_res.c  spv_info_dialog.c  spv_item.c  spv_scrollview.c  spv_set_info_dialog.c  spv_setup_dialog.c  spv_static.c  spv_toast.c
system/app-launcher/p2p_dana/: Makefile.am  danaMain.c  danale.conf
system/app-launcher/q360upgrade/: ota_upgrade.c  upgrade.c
system/app-launcher/sysserver/: Makefile  config_manager.c  pcbtest_server.c  spv_app.c  spv_config_keys.c  spv_event.c  spv_file_manager.c  spv_file_receiver.c  spv_indication.c  spv_input.c  spv_language_res.c  spv_launcher.c  spv_message.c  spv_properties.c  spv_server.c  spv_stream.c  spv_utils.c  spv_wifi.c  sysserver_api.c  sysserver_api_test.c
system/app-libra-dana/: Config.in  Makefile.am  S905libra_dana  app-libra-dana.mk  avInput.c  base64.c  configure.ac  danaMain.c  danale.conf  demuxer.c  playback.c
system/app-libra-dana/inc/: Appro_avi_shm.h  alarm_common.h  alarm_db_client.h  alarm_db_common.h  av_audio.h  av_osa_ipc.h  av_osa_msg.h  av_shm.h  av_video_burst.h  av_video_common.h  av_video_display.h  avi_demux.h  cfg_shm.h  common_inft.h  common_inft_cfg.h  common_inft_data.h  danavideo.h  danavideo_cmd.h  drv_audio.h  file_dir.h  info_log.h  ipc_shm.h  media_buffer.h  osa.h  osa_debug.h  osa_ipc.h  osa_prf.h  osa_thr.h  playback.h  shm_util.h  wifi.h  (+1 more)
system/app-libra-main/: Config.in  Makefile.am  S904spv_gui  app-libra-main.mk  config_manager.c  config_manager.h  configure.ac  envsetup.sh  libramain.h  properties.c  properties.h  spv_adas.c  spv_app.c  spv_app.h  spv_browser_folder.c  spv_browser_folder.h  spv_common.h  spv_debug.h  spv_event.c  spv_event.h  spv_folder_dialog.c  spv_folder_dialog.h  spv_icon_res.c  spv_info_dialog.c  spv_info_dialog.h  spv_item.c  spv_item.h  spv_language_res.c  spv_language_res.h  spv_main.c  spv_media.h  spv_media_scanner.c  spv_playback_dialog.c  spv_scrollview.c  spv_scrollview.h  spv_set_info_dialog.c  spv_set_info_dialog.h  spv_setup_dialog.c  spv_static.h  spv_toast.c  (+6 more)
system/app-specs-bt/: Config.in  Makefile.am  app-specs-bt.mk  app_ble_client.c  app_ble_client_xml.c  app_ble_main.c  app_ble_server.c  app_disc.c  app_dm.c  app_manager.c  app_manager_main.c  app_opc_main.c  app_ops_main.c  app_specs_main.c  app_tm_vsc.c  configure.ac  start_bsa_server.c
system/app-vrec/: CMakeLists.txt  Config.in  app-vrec.cpp  app-vrec.mk
system/audiobox/: CMakeLists.txt  Config.in  audio_chn.c  audio_rpc.c  audio_streamops.c  audiobox.c  audiobox.mk  audiobox.pc  audiobox_ctl.c  audiobox_hal.c  audiobox_listener.c  audiobox_service.c  audiobox_softvol.c
system/audiobox2/: Config.in  Makefile.am  audio_chn.c  audio_streamops.c  audiobox.c  audiobox2.mk  audiobox_ctl.c  audiobox_hal.c  audiobox_listener.c  audiobox_service.c  configure.ac
system/cep/: Config.in  Makefile.am  cep.c  cep.h  cep.mk  configure.ac
system/eventhub/: Config.in  Makefile.am  configure.ac  event.h  event.pc  eventhub.c  eventhub.mk  eventhub_back.c  libevent.c  list.c  list.h  message_queue.h  message_queue_interface.c  message_queue_interface.h  stat.c  stat.h
system/fisheye_k_tool/: CMakeLists.txt  Config.in  fisheye_k_tool.mk  main.cpp
system/hlibcamsensor/: CMakeLists.txt  Config.in  hlibcamsensor.mk  hlibcamsensor.pc  pciuser.c  sensor_phy.c  sensorapi.c
system/hlibdsp/: Config.in  Makefile.am  ceva-tl421.c  configure.ac  hlibdsp.mk  libdsp.pc  test.c
system/hlibfodetv2/: Config.in  Makefile.am  configure.ac  hlib_fodet.c  hlib_fodet.h  hlibfodetv2.mk  hlibfodetv2.pc  test.c
system/hlibfr/: Config.in  Makefile.am  configure.ac  fr.c  fr.pc  fr2.c  hlibfr.mk  test.c
system/hlibg1v6/: Config.in  Makefile.am  RELEASE_RULES  config.mak  configure.ac  hlibg1v6.mk  hlibg1v6.pc
(+9620 files in other folders)
