project(app-demos)
cmake_minimum_required(VERSION 2.8)

add_subdirectory(audiobox/001)
add_subdirectory(audiobox/002)
add_subdirectory(audiobox/003)
add_subdirectory(audiobox/004)
add_subdirectory(audiobox/005)
add_subdirectory(audiobox/006)
add_subdirectory(va/001)
add_subdirectory(va/002)
add_subdirectory(va/003)
add_subdirectory(video/001)
add_subdirectory(video/002)
add_subdirectory(video/003)
add_subdirectory(video/004)
add_subdirectory(video/005)
add_subdirectory(video/006)
add_subdirectory(video/007)
add_subdirectory(video/008)
add_subdirectory(video/009)
add_subdirectory(video/010)
add_subdirectory(video/011)
add_subdirectory(video/012)
add_subdirectory(video/013)
add_subdirectory(video/014)
add_subdirectory(video/015)
add_subdirectory(video/016)
add_subdirectory(camera/001)
add_subdirectory(camera/002)
add_subdirectory(camera/003)
add_subdirectory(camera/004)
add_subdirectory(camera/005)
add_subdirectory(camera/006)
add_subdirectory(camera/007)
add_subdirectory(camera/008)
add_subdirectory(camera/009)
add_subdirectory(camera/010)
add_subdirectory(camera/011)
add_subdirectory(camera/012)
add_subdirectory(recorder/001)
add_subdirectory(recorder/002)
add_subdirectory(recorder/003)
add_subdirectory(recorder/004)
add_subdirectory(recorder/005)
add_subdirectory(recorder/006)
add_subdirectory(recorder/007)
add_subdirectory(recorder/008)
add_subdirectory(player/001)
add_subdirectory(player/002)
add_subdirectory(player/003)
add_subdirectory(uvc/001)
add_subdirectory(uvc/002)
add_subdirectory(uvc/003)
add_subdirectory(uvc/004)
add_subdirectory(uvc/005)
add_subdirectory(uvc/006)
add_subdirectory(display/001)
add_subdirectory(display/002)
add_subdirectory(wi-fi/001)
add_subdirectory(wi-fi/002)
add_subdirectory(wi-fi/003)
add_subdirectory(wi-fi/004)
add_subdirectory(videobox/001)
