project(vrec_demo)
cmake_minimum_required(VERSION 2.8)

include(FindPkgConfig)

set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -Wl,--as-needed -lstdc++")
set(LIST_LIBNAME)
set(LIST_LIB "LIST_LIB-NOTFOUND")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")

link_libraries(m)
link_libraries(pthread)

function(search_slib path_slib slib_name)
    set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
    set(index 1)
    while (index LESS ${ARGC})
         message("ARGV = ${ARGV${index}}")
         set(input_slib_name ${ARGV${index}})
         find_library(static_lib_${input_slib_name}
             NAMES ${input_slib_name})
          if (static_lib_${input_slib_name})
              message("SUCESS:find static lib:${static_lib_${input_slib_name}}")
              set(result "${result}" "lib${input_slib_name}.a")
              #set(result "${result} ${static_lib_${input_slib_name}}")
              message("result:${result}")
          else (static_lib_${slib_name})
              message("WARNING:not found static lib${input_slib_name}.a,then using dynamic lib${input_slib_name}.so")
              set(result "${result}" "lib${input_slib_name}.so")
              message("result:${result}")
          endif ()
          math(EXPR index "${index} + 1")
    endwhile()
    set(${path_slib} ${result} PARENT_SCOPE)
    message("Debug: search_slib lib list-->${result}")
endfunction()

pkg_check_modules(LIBCODECS REQUIRED libcodecs)
include_directories(${LIBCODECS_INCLUDE_DIRS})
add_definitions(${LIBCODECS_CFLAGS})
set(LIST_LIBNAME ${LIST_LIBNAME} ${LIBCODECS_LIBRARIES})

pkg_check_modules(LIBFR REQUIRED fr)
include_directories(${LIBFR_INCLUDE_DIRS})
add_definitions(${LIBFR_CFLAGS})
set(LIST_LIBNAME ${LIST_LIBNAME} ${LIBFR_LIBRARIES})

pkg_check_modules(LIBEVENT REQUIRED event)
include_directories(${LIBEVENT_INCLUDE_DIRS})
add_definitions(${LIBEVENT_CFLAGS})
set(LIST_LIBNAME ${LIST_LIBNAME} ${LIBEVENT_LIBRARIES})

pkg_check_modules(LIBQVPLAY REQUIRED qvplay)
include_directories(${LIBQVPLAY_INCLUDE_DIRS})
add_definitions(${LIBQVPLAY_CFLAGS})
set(LIST_LIBNAME ${LIST_LIBNAME} ${LIBQVPLAY_LIBRARIES})

pkg_check_modules(LIBVIDEOBOX REQUIRED videobox)
include_directories(${LIBVIDEOBOX_INCLUDE_DIRS})
add_definitions(${LIBVIDEOBOX_CFLAGS})
set(LIST_LIBNAME ${LIST_LIBNAME} ${LIBVIDEOBOX_LIBRARIES})

pkg_check_modules(LIBAUDIOBOX REQUIRED audiobox)
include_directories(${LIBAUDIOBOX_INCLUDE_DIRS})
add_definitions(${LIBAUDIOBOX_CFLAGS})
set(LIST_LIBNAME ${LIST_LIBNAME} ${LIBAUDIOBOX_LIBRARIES})

# build daemon
add_executable(demo_v app-vrec.cpp)
foreach(lib_var ${LIST_LIBNAME})
        message("link lib_var-->${lib_var}")
endforeach()

message("dynamic compile videobox.............0")
message("begin LIST_LIB:${LIST_LIB}")
message("begin LIST_LIBNAME:${LIST_LIBNAME}")
search_slib(LIST_LIB ${LIST_LIBNAME})
foreach(lib_var ${LIST_LIB})
    message("link lib_var-->${lib_var}")
endforeach()
message("search_slib_result  result:${LIST_LIB}")
    foreach(lib_var ${LIST_LIB}) 
        message("link lib_var-->${lib_var}")
        target_link_libraries(demo_v ${lib_var})
    endforeach()
message("dynamic compile videobox.............1")
# --> install
install(TARGETS demo_v DESTINATION bin)
